mdapi/objects/StcZone__c.object
<CustomObject>
    <description>Object to hold Global Region, Region, Territory</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this StcZone active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Accounts_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who gets assigned new Accounts for the Territory</inlineHelpText>
        <label>Assign Accounts To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StcZones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who gets assigned new Leads for the Territory</inlineHelpText>
        <label>Assign Leads To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StcZones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlling_Office__c</fullName>
        <label>Controlling Office</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cork, IE</fullName>
                </value>
                <value>
                    <fullName>Draper, Utah  US</fullName>
                </value>
                <value>
                    <fullName>Sydney, NSW AU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <label>StcZone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Global_Region__c</columns>
        <columns>Territory__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Assign_Accounts_To__c</columns>
        <columns>Region__c</columns>
        <columns>Controlling_Office__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Zones</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>StcZone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StcZones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>